[package]
name = "openlora-governance"
version = "0.1.0"
edition = "2021"
description = "OpenLoRA Governance Kernel — Kill-switch, signatures, audit"
license = "Apache-2.0"

[[bin]]
name = "openlora-gov"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
