[project]
name = "openagency"
version = "0.1.0"
description = "OpenAgency — RL-LoRA Training System for OpenLoRA"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "trl>=0.7.4",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
