[project]
name = "opendata"
version = "0.1.0"
description = "OpenData — Dataset Engineering Pipeline for OpenLoRA"
requires-python = ">=3.11"

dependencies = [
    "datasets>=2.14.0",
    "transformers>=4.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
