[project]
name = "openexperiment"
version = "0.1.0"
description = "OpenExperiment — Experiment Tracking for OpenLoRA"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
