[project]
name = "opengraph"
version = "0.1.0"
description = "OpenGraph — Behavioral Mapping System for OpenLoRA"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
umap = [
    "umap-learn>=0.5.4",
]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
