[project]
name = "openxai"
version = "0.1.0"
description = "OpenXAI — Explainability Engine for OpenLoRA"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
